--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,3 +53,16 @@ h1 {
     transform:translateX(25%);
   }
 }
+
+#botao{
+  border-radius: 20px;
+  border: 1px solid #191818;
+  width: 38px;
+  height: 38px;
+  margin-right: 8px;
+  cursor: pointer;
+
+}
+#botoes{
+  text-align: right;
+}
