--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,23 +1,28 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <title>ToDoList</title>
-    <link rel="stylesheet" type="text/css" href="../styles/style.css">
-</head>
-
 <body>
-
-    <div class="input-group">
-        <span class="input-group-text">Idea</span>
-        <input type="text" aria-label="text" class="form-control">
-        <input type="submit" class="btn btn-secondary"></button>
-      </div>
+<p><b>📌 Seja bem vindo ao Save Ideas. Aqui você pode salvar qualquer ideia que tiver!</b></p>
+    <form action="/" method="post">
+  <div class="mb-3">
+    <label  class="form-label" ><strong>Título</strong></label>
+    <input type="text" class="form-control" placeholder="Titulo..." required>
+  </div>
+  <div class="mb-3">
+    <label class="form-label"><strong>Descrição</strong></label>
+    <input type="text" class="form-control" placeholder="Descrição..." required>
+  </div>
+  <button type="submit" class="btn btn-dark">Adicionar</button>
+</form>
+<br><br>
+<ul class="list-group">
+  <li class="list-group-item list-group-item-dark">
+    
+    <div id="botoes">
+        <button class="btn btn-dark" id="botao">
+        ✏
+        </button>
+        <button class="btn btn-dark" id="botao">
+        🗑
+        </button>
+    </div>
+  </li>
+</ul>
 </body>
-
-</html>
