--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,35 +1,22 @@
 <body>
-<p><b>📌 Seja bem vindo ao Save Ideas. Aqui você pode salvar qualquer ideia que tiver!</b></p>
-    <form action="/list" method="post">
-  <div class="mb-3">
-    <label  class="form-label" ><strong>Título</strong></label>
-    <input name="Titulo" type="text" class="form-control" placeholder="Titulo..." required>
-  </div>
-  <div class="mb-3">
-    <label class="form-label"><strong>Descrição</strong></label>
-    <input name="Texto" type="text" class="form-control" placeholder="Descrição..." required>
-  </div>
-  <button type="submit" class="btn btn-dark" id="botaozin">Adicionar</button>
-</form>
-
-<br>
-<br>
-
-<ul class="list-group">
-  <li class="list-group-item list-group-item-dark">
-    
-    <div id="botoes">
-        <button class="btn btn-dark" id="botao">
-        ✏
-        </button>
-        <button action="/:id" method="delete" type="submit" class="btn btn-dark" id="botao">
-        🗑
-        </button>
+  <p><b>📌 Seja bem vindo ao Save Ideas. Aqui você pode salvar qualquer ideia que tiver!</b></p>
+  <form action="/list" method="post">
+    <div class="mb-3">
+      <label class="form-label"><strong>Título</strong></label>
+      <input name="Titulo" type="text" class="form-control" placeholder="Titulo..." required>
     </div>
+    <div class="mb-3">
+      <label class="form-label"><strong>Descrição</strong></label>
+      <input name="Texto" type="text" class="form-control" placeholder="Descrição..." required>
+    </div>
+    <button type="submit" class="btn btn-dark" id="botaozin">Adicionar</button>
+  </form>
 
-  </li>
-</ul>
-<script>
+  <br>
 
-</script>
+  <ul class="list-group" id="listinha">
+    
+  </ul>
+
+
 </body>
